body CSS bug/gap fix

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -6,6 +6,11 @@
   font-family: 'Lato', sans-serif;
 }
 
+html {
+  height: 100%;
+  width: 100%;
+}
+
 a:hover {
   color: pink;
 }
